<?xml version="1.0" encoding="utf-8"?>
<!--
		Copyright (C) 2009 University of Washington Licensed under the Apache
		License, Version 2.0 (the "License"); you may not use this file except
		in compliance with the License. You may obtain a copy of the License
		at http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
		
		Some translations were added or updated by JHU/APL
	-->
<resources>
<string name="hello">Hello World, rapidandroid</string>
<string name="not_implemented">Not implemented yet!</string>
<string name="show_all_messages">Show all Messages</string>
<string name="show_all_multisms_messages">Show Multipart Messages</string>
<string name="app_name">Rapid Android</string>
<string name="lbl_formname">Name</string>
<string name="lbl_description">Description</string>
<string name="lbl_formprefix">Prefix</string>
<string name="lbl_formchoose">Forms:</string>
<string name="lbl_formparser">Parser Type</string>
<string name="invalid_form_title">Invalid Form</string>


<string name="invalid_form_Nofield_message">You must have at least one field for this form to save</string>

<string name="invalid_form_Noformname_message">You must enter a formname</string>

<string name="invalid_form_Noprefix_message">You must enter a prefix</string>

<string name="invalid_form_Notunique_message">This form is not unique</string>

<string name="invalid_form_duplicate_formname">Duplicate Form Name</string>
<string name="invalid_form_duplicate_formname_message">The form of this name already exists</string>
<string name="invalid_form_duplicate_formprefix">Duplicate Form Prefix</string>
<string name="invalid_form_duplicate_formprefix_message">The form of this prefix already exists</string>


<string name="invalid_form_whitespace_formname_message">The form name cannot contain a space</string>
<string name="invalid_form_whitespace_formprefix_message">The form prefix cannot contain a space</string>

<string name="invalid_form_create_fail">Form creation failed</string>
<string name="invalid_form_create_fail_message">Unable to create the form and its support tables.  Check the logs.</string>
<string name="invalid_form_confirm_close">Confirm Closure</string>
<string name="invalid_form_confirm_close_message">Are you sure you want to close without saving changes?</string>

<string name="prompt_backpressed_savechanges">Save Changes First?</string>
<string name="prompt_keep_working">No, keep working</string>


<string name="lbl_dashboardmessages">Recent Messages:</string>
<string name="dash_title">RapidAndroid :: Dashboard</string>
<string name="lbl_form">Form:</string>
<string name="lbl_messages"> Messages</string>
<string name="dashboard_menu_create">Create Form</string>
<string name="dashboard_menu_edit">View Form</string>
<string name="dashboard_menu_erase_data">Erase Data</string>
<string name="dashboard_menu_delete_form">Delete Form</string>
<string name="dashboard_menu_view">Show Charts</string>
<string name="dashboard_txt_wait">Please wait....</string>
<string name="formeditor_menu_cancel">Cancel</string>
<string name="formeditor_menu_save">Save</string>
<string name="lbl_scroll_parser">Parse Mode:</string>
<string name="formeditor_menu_add_field">Add Field</string>
<string name="dashboard_menu_show_reports">Reports</string>
<string name="menu_done">Finished</string>
<string name="lbl_fieldname">Name:</string>
<string name="lbl_fieldprompt">Description:</string>
<string name="lbl_fieldtypechoose">Field Type:</string>
<string name="lbl_fields">Fields:</string>
<string name="formeditor_menu_edit_forms">Edit Fields</string>

<string name="error_nofieldname_required"> Name * Required field</string>
<string name="error_noprompt">Description: * Required field</string>
<string name="duplicate_fieldname">* Field name must be unique to this form</string>

<string name="glb_change_settings">Change Settings</string>
<string name="addfield_scroll_word">word</string>
<string name="addfield_scroll_number">number</string>
<string name="addfield_scroll_weight">weight</string>
<string name="addfield_scroll_height">height</string>
<string name="addfield_scroll_ratio">ratio</string>
<string name="addfield_scroll_length">length</string>
<string name="addfield_scroll_t_f">True/False</string>
<string name="addfield_scroll_date1">Date/dd.dd.dddd</string>
<string name="addfield_scroll_date2">Date/dddd.dd.dd</string>
<string name="addfield_scroll_alphanumeric">alphanumeric</string>
<string name="addfield_scroll_freetext">freetext</string>
<string name="addfield_scroll_tropicalfruit">tropical fruit</string>
<string name="addfield_scroll_diseaselist">diseaselist/1 to 3</string>

<string name="btn_finishaddfield">Add</string>
<string name="btn_canceladdfield">Cancel</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="ok">Ok</string>
<string name="alert">Alert</string>
<string name="confirm_delete">Are you sure you want to delete?</string>

<string name="no_msgs_to_chart">This form has no messages or data to chart</string>
<string name="no_data_to_chart">There is no data to chart.</string>
<string name="chart_choose_field_title">Choose Field</string>

<string name="messages_overtime">Messages over time</string>

<string name="formreview_menu_done">Done</string>
<string name="formreview_menu_format">Show Example</string>
<string name="formlistview_title">Created Forms</string>
<string name="form_delete_message">You cannot delete a form containing data or messages</string>
<string name="chart_menu_done">Done</string>
<string name="chart_menu_change_variable">Change Variable</string>
<string name="chart_menu_change_parameters">Change Date Range</string>
<string name="formreview_dump_csv">Output CSV</string>
<string name="formreview_schedule_dump_csv">Schedule Output CSV</string>
<string name="formreview_upload_csv">Upload Report</string>
<string name="formreview_title">RapidAndroid :: Review Form</string>
<string name="formreview_sample_submission">Sample Submission</string>
<string name="lbl_enddate">End date:</string>
<string name="lbl_startdate">Start date:</string>
<string name="range_btn_lastweek">Last Week</string>
<string name="range_btn_lastmonth">Last Month</string>
<string name="range_btn_lastday">Last Day</string>
<string name="messages_overtime_title">Messages over time</string>
<string name="select_daterange_title">Select Date Range</string>
<string name="Illegal_arg_startdate">This activity must be called with an appropriate startdate in the past</string>
<string name="lbl_totaldaterange">Total Daterange:</string>
<string name="lbl_chart_chartsubject">Chart Subject:</string>
<string name="lbl_chart_datasummary">Data Summary:</string>
<string name="lbl_chart_totalmessages">Total Messages:</string>
<string name="btn_daterange_startdate">Start Date</string>
<string name="btn_daterange_enddate">End Date</string>
<string name="range_btn_lastthreemonth">Three Months</string>
<string name="btn_entire_range">Entire Range</string>
<string name="rad_last100">Last 100</string>
<string name="rad_last500">Last 500</string>
<string name="rad_all">All</string>
<string name="glbsettings_title">RapidAndroid :: Global Settings</string>
<string name="glbsettings_inprogress_ack">Message parsing in progress</string>
<string name="glbsettings_parse_ack">Message parsed successfully, thank you</string>
<string name="glbsettings_noparse_ack">Try again</string>
<string name="glb_chk_noparse_text">Reply on failed parses</string>
<string name="glb_chk_parse_text">Reply on successful parses</string>
<string name="glb_chk_inprogress_text">Reply on in progress parses</string>
<string name="glbsettings_heading">Global reply settings</string>
<string name="glb_lbl_activeall">Activate all SMS features</string>
<string name="glb_lbl_logging">Activate Logging</string>


<string name="numberHint">1 to 55</string>
<string name="lbl_outputFreq">Period for output in seconds \n(1 to 55 are valid values)</string>
<string name="settings_saved">Changes Saved</string>
<string name="refresh_cache">Refresh the cache</string>

<string name="refresh">Refresh</string>

<string name="lbl_forwardingNums">Forward SMS to these numbers (separate with comma)</string>
<string name="csv_title">RapidAndroid :: CSV Scheduler  Forwarding</string>
<string name="lbl_csv_update_settings">Update Settings</string>
<string name="lbl_deleteAfterCsvOut">Delete data after CSV output</string>
<string name="csv_alert_message">This form has no messages or data to output. Therefore, the output will only contain the header columns.</string>
<string name="prompt_csv_job_begun">CSV output job has begun</string>
<string name="prompt_csv_save_complete">CSV Save Complete</string>

<string name="lbl_toggleAutoCsvOutput">Activate auto CSV output</string>

<string name="prompt_graph_please_wait">Please wait</string>
<string name="prompt_graph_drawing">Drawing graph.........</string>
<string name="prompt_graph_no_data">No data</string>
<string name="prompt_graph_nodata_message">Sorry, there was no data for the selected variable and date range.</string>
<string name="date_format">MM/dd/yy HH:mm:ss</string>
<string name="status_on_failed_to_insert">Failed to Insert into Database</string>

</resources>
