<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:id="@+id/widget28"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lbl_formname"
				android:id="@+id/lbl_formname" android:layout_weight="0">
			</TextView>
			<EditText android:id="@+id/etx_formname"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="14sp" android:layout_weight="2"
				android:singleLine="true"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lbl_formprefix"
				android:id="@+id/lbl_formprefix" android:layout_weight="0">
			</TextView>
			<EditText android:id="@+id/etx_formprefix"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:textSize="14sp" android:layout_weight="2"
				android:singleLine="true"></EditText>

		</TableRow>
		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/lbl_description"
				android:id="@+id/lbl_description" android:layout_weight="0">
			</TextView>
			<EditText android:id="@+id/etx_description"
				android:layout_width="fill_parent" android:textSize="14sp"
				android:gravity="top" android:layout_height="wrap_content"
				android:layout_weight="2" android:singleLine="true"></EditText>

		</TableRow>

	</TableLayout>


	<LinearLayout android:id="@+id/FormFieldsLayout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/linearLayout1">
			<TextView android:text="@string/lbl_formparser"
				android:layout_height="wrap_content"
				android:id="@+id/etx_formparser"
				android:layout_width="wrap_content">
			</TextView>
			<Spinner android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/spinner_formparser">
			</Spinner>
		</LinearLayout>
	<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" style="?android:attr/listSeparatorTextViewStyle"
			android:text="@string/lbl_fields" android:id="@+id/lbl_fields">
		</TextView>
		<ListView android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:id="@+id/lsv_createfields">
		</ListView>
	</LinearLayout>

</LinearLayout>
